# model_production

./: Makefile  README.md  make_model.py  pyproject.toml
FlaskAPI/: Makefile  app.py  wsgi.py
models/: model_file.p
